[gd_scene format=4 uid="uid://ditt1j1ooojdu"]

[ext_resource type="Script" uid="uid://bdny0ndxm23wr" path="res://menus/main_menu.gd" id="1_8gy84"]
[ext_resource type="Texture2D" uid="uid://b7hejkrsjs8r3" path="res://assets/Stoneage.png" id="2_ij7vn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_12m17"]
texture = ExtResource("2_ij7vn")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
0:4/0 = 0
2:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
4:6/0 = 0
5:6/0 = 0
4:7/0 = 0
5:7/0 = 0

[sub_resource type="TileSet" id="TileSet_gb1e0"]
sources/0 = SubResource("TileSetAtlasSource_12m17")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kvqlu"]
color = Color(1, 1, 1, 1)
thickness = 5

[node name="MainMenu" type="Control" unique_id=1821274012]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8gy84")

[node name="Background" type="Control" parent="." unique_id=77500799]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)

[node name="BackgroundBottom" type="TileMapLayer" parent="Background" unique_id=1439821114]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAABAAcAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAcAAAAAAAAAAAANAAAAAAAAAAAAAAANAAcAAAAAAAAAAAAAAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAABAAAAAAAGAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAALAAcAAAAAAAAAAAAMAAcAAAAAAAAAAAANAAYAAAAAAAAAAAANAAUAAAAAAAAAAAANAAQAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAEAAAAAAAAAAAAMAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAABAAAAAAADAAUAAAAAAAAAAAAFAAYAAAACAAAAAAALAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAAMAAQAAAACAAEAAAABAAQAAAADAAEAAAACAAEAAAADAAEAAAAGAAEAAAACAAEAAAAEAAEAAAACAAEAAAABAAYAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAIAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAALAAMAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAEAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAACAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAAKAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAALAAQAAAAAAAAAAAAKAAQAAAAAAAAAAAAJAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAADAAQAAAABAAEAAAACAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAABAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAACAAEAAAALAAUAAAAAAAAAAAAKAAUAAAACAAEAAAAJAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAJAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wUAAAAAAAAAAAD//wQAAAAAAAAAAAD//wYAAAAAAAAAAAD//wgAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAgAAAAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAP//AAAAAAAAAAANAP//AAAAAAAAAAAMAP//AAAAAAAAAAALAP//AAAAAAAAAAAKAP//AAAAAAAAAAAJAP//AAAAAAAAAAAIAP//AAAAAAAAAAAHAP//AAAAAAAAAAAGAP//AAAAAAAAAAAFAP//AAAAAAAAAAAEAP//AAAAAAAAAAADAP//AAAAAAAAAAACAP//AAAAAAAAAAABAP//AAAAAAAAAAAAAP//AAAAAAAAAAD//wcAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_gb1e0")

[node name="BackgroundTop" type="TileMapLayer" parent="Background" unique_id=1502034365]
position = Vector2(-4.7683716e-07, 1.4901161e-08)
tile_map_data = PackedByteArray("AAABAAUAAAAKAAMAAAABAAYAAAAKAAQAAAAHAAUAAAAGAAMAAAAHAAYAAAAGAAQAAAAMAAUAAAAKAAMAAAAMAAYAAAAKAAQAAAA=")
tile_set = SubResource("TileSet_gb1e0")
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=711546390]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 60
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1591340141]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1451418568]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Masquerade at the Museum"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1936947239]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxLine_kvqlu")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1889879933]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="StartGame" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer" unique_id=883643277]
layout_mode = 2
size_flags_horizontal = 5
text = "Start Game"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer" unique_id=516935539]
layout_mode = 2
size_flags_horizontal = 5
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer" unique_id=142416477]
layout_mode = 2
size_flags_horizontal = 5
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
